# uni

piot/cv_2/: Cvik2.zap16  pukikaki.mlapp
piot/cv_3/: flows.json
rrm/install/: local_setup.sh  setup.sh
rrm/install/cv1/lib/cv1/: cv1_node
rrm/install/cv1/share/cv1/: local_setup.sh  package.sh  package.xml
rrm/install/cv1/share/cv1/cmake/: cv1Config.cmake
rrm/install/cv2/lib/cv2/: cv2_node  logger_node
rrm/install/cv2/share/cv2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
rrm/install/cv2/share/cv2/launch/: cv2.launch.xml
rrm/install/rrm_msgs/share/rrm_msgs/: local_setup.sh  package.dsv  package.ps1  package.sh
rrm/install/rrm_msgs/share/rrm_msgs/cmake/: export_rrm_msgs__rosidl_generator_cExport-noconfig.cmake  (+11 more)
rrm/install/rrm_sim/lib/rrm_sim/: robot_sim_node
rrm/install/rrm_sim/share/rrm_sim/: local_setup.sh  package.sh
rrm/install/rrm_simple_robot_model/share/rrm_simple_robot_model/: local_setup.sh  package.sh
rrm/log/: latest_build
rrm/src/: fdg.m
rrm/src/cv1/: CMakeLists.txt
rrm/src/cv1/include/cv1/: robot.hpp
rrm/src/cv1/src/: cv1_node.cpp  robot.cpp
rrm/src/cv2/: CMakeLists.txt
rrm/src/cv2/launch/: cv2.launch.xml
rrm/src/cv2/src/: joint_logger.cpp  teleop.cpp
rrm/src/cv3/: CMakeLists.txt  package.xml
rrm/src/cv3/launch/: cv3.launch.xml
rrm/src/cv3/src/: joint_logger.cpp  teleop.cpp
rrm/src/cv4/: CMakeLists.txt  package.xml
rrm/src/cv4/config/: cv4.rviz
rrm/src/cv4/include/cv4/: logger_node.hpp
rrm/src/cv4/launch/: cv4.launch.xml
rrm/src/cv4/src/: joint_logger.cpp  teleop.cpp
rrm/src/cv5/: CMakeLists.txt  desc.md  package.xml
rrm/src/cv5/launch/: cv5.launch.xml
rrm/src/cv5/src/: joint_logger.cpp  teleop.cpp
rrm/src/cv6/: CMakeLists.txt  package.xml
rrm/src/cv6/include/cv6/: logger_node.hpp
rrm/src/cv6/launch/: cv6.launch.xml
rrm/src/cv6/src/: ik_solver.cpp  joint_logger.cpp  motion_manager.cpp  teleop.cpp
rrm/src/cv6/srv/: BestIK.srv  ComputeIK.srv  MoveToCartesian.srv
rrm/src/cv8/: README.md
rrm/src/cv8/abb_model/urdf/: robot.urdf
rrm/src/cv8/stl_modely/: F22.stl
rrm/src/cv8_traj/: CMakeLists.txt  ds.py  package.xml
rrm/src/cv8_traj/config/: params.yaml  truck.yaml
rrm/src/cv8_traj/include/cv8_traj/: manipulator.hpp
rrm/src/cv8_traj/launch/: cv8_traj.launch.py  cv8_traj.launch.xml
rrm/src/cv8_traj/logs/: cv8_traj_joint_log.csv  cv8_traj_tool_log.csv
rrm/src/cv8_traj/src/: manipulator.cpp  manipulator_node.cpp  model_spawner.cpp  pose_teacher.cpp
rrm/src/log/: latest_build
rrm/src/rrm_msgs/: CMakeLists.txt
rrm/src/rrm_msgs/srv/: SaveState.srv
rrm/src/rrm_msgs/srv/install/: local_setup.sh  setup.sh
rrm/src/rrm_msgs/srv/log/: latest_build  latest_list
rrm/src/rrm_sim/src/: robot_sim_node.cpp
rrm/src/rrm_simple_robot_model/urdf/: arm.urdf
sp/cv_2/: cv_2.m  cv_2_sim.slx  cv_2_sim.slxc
sp/cv_3/: cv_3.m  sim_cv_3.slx
sp/cv_4/: cv4_sp.slx  cv4_sp.slx.autosave  cv4_sp.slxc  spoj.m
sp/cv_5/cv5model/: cv5model.slx  cv5model.slxc  cv5model_MatlabR2019a.slx  cv5model_MatlabR2019a.slx.r2019a  cv5model_MatlabR2019a.slxc  cv5par.m  vymennik.slx  vymennik.slxc  vymennik1.m  vymennik5cviko.slx  vymennik5cviko.slxc
sp/cv_7/: cv7.asv  cv7.m  cv7_ident.slx  cv7_ident.slx.original  cv7_kiriienko_lovkin.mat  cv7_kiriienko_lovkin_2.mat  data_5v_recovered.mat  matlab.mat  restore_5v.m  test.m
sp/cv_8/magLevSP2/: exp_D_0_128.mat  exp_D_0_192.mat  exp_I_3_2.mat  exp_def.mat  magLevSP2.slx  magLevSP2.slx.autosave  test.m
sp/cv_8/magLevSP2/slprj/_jitprj/: jitEngineAccessInfo.mat  s42tQWVNHNYIJhZnoIIxJPC.l  s42tQWVNHNYIJhZnoIIxJPC.mat  sC7xILZBBswYunEitIVz9ZE.l  sC7xILZBBswYunEitIVz9ZE.mat  sQNVi9CfgSXbK5bPzRwYV1E.l  sQNVi9CfgSXbK5bPzRwYV1E.mat  snTFuWga1VYyGGYpedMuzH.l  snTFuWga1VYyGGYpedMuzH.mat  sxnqcwv5ASapr00d8Mro1gH.l  sxnqcwv5ASapr00d8Mro1gH.mat
umint/cv_1/: cv_1.asv  cv_1.m  cv_1_bonus_a.m  cv_1_bonus_b.m  testfn3c.m
umint/cv_2/genetic/: around.m  cv_2.asv  cv_2.m  cv_2_bonus_a.m  cv_2_bonus_b.m  eggholder.m  genrpop.m  intmedx.m  invord.m  muta.m  mutm.m  mutx.m  rastrigin.m  readme.txt  selbest.m  seldiv.m  selrand.m  selsort.m  swappart.m  testfn3.m  warmpopx.m
umint/cv_3/genetic/: cv_3.asv  cv_3.m  invfit.m  selsus1.m  shake.m  swapgen.m  testfn2b.m
umint/nikita/programy_ulohy56/: uloha5a.m  uloha5b.asv  uloha5b.m  uloha6.m
umint/nikita/programy_ulohy78/: dispznak.m  nacitaj_cisla_CNN.m  uloha8.m  uloha8_multiple.m
umint/task_1/: cv_1.m  cv_1_bonus_b_3d.m
umint/task_2/: description_of_ga_algrthm.txt  umint_cv_2.md
umint/task_2/genetic/: crosgrp.m  crosord.m  mutn.m  schwefel.m  selsus.m  seltourn.m  testfn1.m  testfn2.m  testfn3b.m
umint/task_3/genetic/: calculate_fitness.m  change.m  crossov.m  fitness_cv_3.m  genpop.m  population.m
umint/task_4/: calc_yield.m  fitness.m  task_4.m  v_sum.m
umint/task_4/final/: fitnessDeathPenalty.m  fitnessModeratePenalty.m  fitnessStepPenalty.m  runGA.m  task_4.m
umint/task_5/Priklad_NS_cv5/: aproximuj_funkciu_final.m  databody.csv
umint/task_6/: klasifikuj_body_final.m  task_6.m  test.m
umint/task_7/: cnn.m  mlp.m  zad7.aux  zad7.fdb_latexmk  zad7.fls  zad7.tex
umint/task_7/results/task7_20260407_181021/: cnn_architecture_run_results_all_models.csv  cnn_dropout_run_results_all.csv  cnn_hyperparams_runtime.csv  cnn_results.mat  cnn_timing.csv  combined_best_summary.csv  mlp_hyperparams_runtime.csv  mlp_results.mat  mlp_run_results_all_models.csv  mlp_timing.csv  table10_dropout_overfit.csv  table11_dropout_mean_summary.csv  table12_mlp_vs_cnn.csv  table13_cpu_vs_gpu.csv  table1_mlp_models_hyperparams.csv  table2_3_mlp_runs_MLP1.csv  table2_3_mlp_runs_MLP2.csv  table4_mlp_summary.csv  table5_cnn_models_hyperparams.csv  table6_8_cnn_runs_CNN1.csv  table6_8_cnn_runs_CNN2.csv  table6_8_cnn_runs_CNN3.csv  table9_cnn_summary.csv  task7_report_publish.m
umint/task_7/shit_code/: loadMNIST_MATLAB.m  mnistReadImages.m  mnistReadLabels.m  task7_rebuild_tables.m  task7_render_figures.m  task7_run_all.m  task7_upscale_figures.m  task7_write_report.m  task7cnn.m  task7cnn_run.m  task7mlp.m  task7mlp_run.m
(+39 files in other folders)
